<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC107"
    android:isScrollContainer="false"
    android:keepScreenOn="false"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="324dp"
        android:layout_height="56dp"
        android:layout_marginBottom="80dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="#212121"
        android:textColorHighlight="#4CAF50"
        android:textColorHint="#212121"
        android:textColorLink="#FFC107"
        android:textCursorDrawable="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtSenha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        tools:background="#FFFFFF" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="107dp"
        android:layout_height="0dp"
        android:layout_marginBottom="280dp"
        android:background="#4CAF50"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="166dp"
        android:layout_height="160dp"
        android:layout_marginTop="24dp"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:foreground="@drawable/ic_logo"
        app:layout_constraintBottom_toTopOf="@+id/txtEmail"
        app:layout_constraintCircleRadius="?attr/dialogCornerRadius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_logo" />

    <EditText
        android:id="@+id/txtSenha"
        android:layout_width="245dp"
        android:layout_height="53dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="40dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#212121"
        android:textColorHighlight="#4CAF50"
        android:textColorHint="#212121"
        android:textColorLink="#D9B70D"
        android:textCursorDrawable="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>